--- a/plus.html
+++ b/plus.html
@@ -1,32 +1,49 @@
+<!--
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 21/9/2017  |  Pre-alpha Stage -->
+
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Papaspyrou Alexandros</title>
+<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+
 <style>
-body,h1 {font-family: "Raleway", sans-serif}
+body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://68.media.tumblr.com/72f70f217f99c7a24cbf91c641562c5f/tumblr_ou1xb2tPKd1si59zfo1_500.gif');
-    height: 50%;
+    background-image: url('https://78.media.tumblr.com/5f2bb72b1a0f064579f996b1db02fab9/tumblr_oxll8eOxya1si59zfo1_1280.jpg');
+    min-height: 100%;
     background-position: center;
     background-size: cover;
 }
 </style>
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
- 
-  <div class="w3-display-middle">
-  
-<center><img src="https://68.media.tumblr.com/0ddbfee6bb5d05f4b1158c4664d943b5/tumblr_ou1xfaJfLd1si59zfo1_r2_250.png" alt="Me" style="width:50%"></center>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"><b>Papaspyrou Alexandros</b></p>
-  </div>
+<div class="bgimg w3-display-container w3-text-white">
+<div class="w3-display-topleft w3-container w3-xlarge">
 
+ <p><a href="http://a-papaspyrou.tk" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
+</a></p>
+
+    <p><button class="w3-button w3-black">soon...</button></p>
+   
+  </div>
+ 
 </div>
 
-</body>
-</html>
+
+<!-- That's all folks! --></body></html>
+<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
