--- a/cv.html
+++ b/cv.html
@@ -1,3 +1,4 @@
+
 <!--CVwebpage
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -76,7 +77,7 @@ body, html {
 <p class="w3-large"><b><i class="fa fa-plus-circle  w3-text-black w3-margin-right" style="font-size:24px " ></i> Συμετοχές</b></p><hr>
 <b>OPENFEST2017</b> 
      <p>στο Α.Ε.Ι Πειραιά Τ.Τ. Συμμετοχή με δυο παρουσιάσεις, η μία σχετικά με την ασφάλεια και την κρυπτογραφία και η δεύτερη σχετικά με την εισαγωγή στο Arduino με παράλληλο εργαστήριο. Υποστήριξη και στην οργάνωση της εκδήλωσης.
-</p></div></div><br>
+</p><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/346373214&amp;color=%23ff5c5c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe></div></div><br>
 
 <div class="w3-white w3-text-grey w3-card-4">
  <div class="w3-container">
@@ -92,21 +93,23 @@ body, html {
  <div class="w3-container">
 <p class="w3-large"><b><i class="fa fa-gear w3-text-black fa-spin w3-margin-right" style="font-size:24px " ></i> Skills</b></p>
 <p>
+C#  / Python / TwinCAT
 <div class="w3-light-grey w3-round-xlarge w3-small">
 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:25%">25%</div></div><br>
+
+MySQL / HAMPP / Raspberry / Siemens και Beckhoff PLC
 <div class="w3-light-grey w3-round-xlarge w3-small">
 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div></div><br>
+
+C / PHP / Matlab / Simulink / LabView / Multisim
 <div class="w3-light-grey w3-round-xlarge w3-small">
 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:75%">75%</div></div><br>
+
+ C++ / VB / HTML / Arduino / Microsoft και LibreOffice
 <div class="w3-light-grey w3-round-xlarge w3-small">
 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:95%">95%</div></div><br>
 
-HTML / PHP / MySQL / HAMPP
-C / C++ / C# / VB / Python / TwinCAT
-Matlab / Simulink / LabView / Multisim
-Arduino / Raspberry / Siemens και Beckhoff PLC
-Microsoft και LibreOffice
-<br>Με εμπειρία στις κολλήσεις και τα ηλεκτρονικά
+<hr>Με εμπειρία στις κολλήσεις και τα ηλεκτρονικά
 και πολύ καλή γνώση και χρήση Η/Υ.<br><br></div></div><br>
 
 <!-- socialme -->
