--- a/navtopmenu.html
+++ b/navtopmenu.html
@@ -41,7 +41,7 @@ body, html {
 <div class="w3-right w3-hide-small">
 	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-cogs"></i> Creations</a>
 	<a href="https://alexandroshub.github.io/cv.html" class="w3-bar-item w3-button"><i class="fa fa-user-circle-o"></i> Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-plus-circle"></i> Plus</a>
+	<a href="https://alexandroshub.github.io/plus.html" class="w3-bar-item w3-button"><i class="fa fa-plus-circle"></i> Plus</a>
 	<a href="https://robodayblog.wordpress.com" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-bullhorn"></i> Blog</a>
 	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a>
 </div>
@@ -52,7 +52,7 @@ body, html {
 <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close &nbsp; ×</a> 
 	<a href="https://alexandroshub.github.io/projects.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-cogs"></i>&nbsp; Creations</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-circle-o"></i>&nbsp; Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-plus-circle"></i>&nbsp; Plus</a>
+	<a href="https://alexandroshub.github.io/plus.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-plus-circle"></i>&nbsp; Plus</a>
 	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-bullhorn"></i>&nbsp; Blog</a> 
 	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i>&nbsp; Messenger</a>
 <hr><!-- social left -->
