--- a/cv.html
+++ b/cv.html
@@ -173,7 +173,7 @@ C / PHP / Matlab / Simulink / LabView / Multisim
           <h5 class="w3-opacity"><b> THE CUBE | </b> Junior Embedded Developer</h5>
           <h6 class="w3-text-black">
           <span class="w3-tag w3-black w3-round"><i class="fa fa-calendar fa-fw w3-margin-right"></i>5-8/2017 </span> 
-          <span class="w3-tag w3-black w3-round"><i class="fa fa-pencil-square-o fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">Doc</a></span>
+          <span class="w3-tag w3-black w3-round"><i class="fa fa-pencil-square-o fa-fw w3-margin-right w3-large "></i><a href="https://drive.google.com/open?id=0B4_FfowS43ESSTduakR6WDk5a0U" style="text-decoration:none;">Doc</a></span>
           <span class="w3-tag w3-black w3-round"><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">είπαν</a></span></h6>
 <p>Το project αφορούσε στον αυτόνομο έλεγχο και οδήγηση οχήματος κατασκευασμένο απο την Robocoaster με χρήση Beckhoff PLC.</p>
  	</div><hr>
