--- a/navtopmenu.html
+++ b/navtopmenu.html
@@ -79,5 +79,15 @@ function toggleFunction() {
     else 
 	{ x.className = x.className.replace(" w3-show", "");  }
 }
+	// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-bar" + " w3-card-2" + " w3-animate-top" + " w3-black";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-black", "");
+    }
+}
 </script>
 </html>
