--- a/navtopmenu.html
+++ b/navtopmenu.html
@@ -32,7 +32,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
 	
-    <div class="w3-bar" id="myNavbar">
+    <div class="w3-bar w3-black" id="myNavbar">
 <a href="https://alexandroshub.github.io/index" class="w3-bar-item w3-button w3-wide">
 <img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp; 
 <span class="w3-animate-opacity w3-hide-small"><b>Papaspyrou</b><span class="w3-hide-small">Alexandros</span></span></a>
