--- a/plus.html
+++ b/plus.html
@@ -6,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 21/9/2017  |  Pre-alpha Stage -->
+Last Update: 24/10/2017  |  Pre-alpha Stage -->
 
 <!DOCTYPE html>
 <html>
@@ -24,7 +24,7 @@ Last Update: 21/9/2017  |  Pre-alpha Stage -->
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://78.media.tumblr.com/5f2bb72b1a0f064579f996b1db02fab9/tumblr_oxll8eOxya1si59zfo1_1280.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2013/11/24/10/18/http-216835_960_720.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
@@ -33,12 +33,15 @@ body, html {height: 100%}
 <body>
 
 <div class="bgimg w3-display-container w3-text-white">
+<div class="w3-display-topright w3-container w3-xlarge">
+<p><a href="https://alexandroshub.github.io/next.html" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-arrow-right"></i></a>
+</div>
 <div class="w3-display-topleft w3-container w3-xlarge">
 
  <p><a href="http://a-papaspyrou.tk" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
 </a></p>
 
-    <p><button class="w3-button w3-black">soon...</button></p>
+    <p><button class="w3-button w3-black">a+  _1_Nov17</button></p>
    
   </div>
  
