--- a/plus.html
+++ b/plus.html
@@ -1,3 +1,4 @@
+
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -41,7 +42,7 @@ body, html {height: 100%}
  <p><a href="http://a-papaspyrou.tk" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
 </a></p>
 
-    <p><button class="w3-button w3-black">a+  _1_Nov17</button></p>
+    <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">a+  _1_Nov17</button></a></p>
    
   </div>
  
