--- a/soon.html
+++ b/soon.html
@@ -7,7 +7,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 24/10/2017  |  Pre-alpha Stage -->
+Last Update: 11/11/2017  |  Pre-alpha Stage -->
 
 <html>
 <title>omg...error...</title>
@@ -20,7 +20,7 @@ Last Update: 24/10/2017  |  Pre-alpha Stage -->
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://cdn.pixabay.com/photo/2017/09/05/13/50/glitch-2717634_960_720.jpg');
+    background-image: url('https://78.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
