--- a/plus.html
+++ b/plus.html
@@ -7,7 +7,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 24/10/2017  |  Pre-alpha Stage -->
+Last Update: 11/11/2017  |  Pre-alpha Stage -->
 
 <!DOCTYPE html>
 <html>
@@ -25,7 +25,7 @@ Last Update: 24/10/2017  |  Pre-alpha Stage -->
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://cdn.pixabay.com/photo/2013/11/24/10/18/http-216835_960_720.jpg');
+    background-image: url('https://78.media.tumblr.com/89b474d66bd1edba199e3e2b1879c963/tumblr_oxxaj71VNh1si59zfo1_1280.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
