--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,12 @@
+<!-- Footer html page
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 15/11/17  -->
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -5,7 +14,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
+<footer class="w3-center w3-black w3-padding-32">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
    <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
 <!-- SM --><div class="w3-black w3-center w3-padding-12">
@@ -27,7 +36,13 @@
 <a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
 <a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
 <a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
-<br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i>Papaspyrou Alexandros 2017</div>
+<br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2017</div>
+<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:40px;" class="w3-circle w3-animate-opacity w3-animate-zoom"> 
 <!-- End footer -->
 </footer>
 </html>
+<!-- That's all folks! 
+
+Mail: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023
+More:  papaspyrou.alexandros@gmail.com  |  papaspyrou@gmx.com
+-->
