--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Pre-alpha Stage | Last Update: 2/10/17  -->
+Pre-alpha Stage | Last Update: 22/11/17  -->
 
 <!DOCTYPE html> 
 <html>
@@ -27,7 +27,7 @@ body, html { height: 100%;      line-height: 1.8; }
 .w3-bar .w3-button { padding: 16px; }
 </style>
 <body>
-<!-- MENU --><div w3-include-html="https://alexandroshub.github.io/navtopmenu.html"></div><script>w3.includeHTML();</script><!-- /MENU -->
+<!-- MENU --><div w3-include-html="https://alexandroshub.github.io/navtopmenu1.html"></div><script>w3.includeHTML();</script><!-- /MENU -->
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
