--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,8 @@
 <title>Page Contact</title>
 </head>
 <body>
-<h1>Form Contact</h1>
-
-<!-- Do not change the code! -->
-<a id="foxyform_embed_link_911594" href="http://www.foxyform.com/">foxyform</a>
+<h1>Form Contact</h1><!-- Do not change the code! -->
+<a id="foxyform_embed_link_911594"></a>
 <script type="text/javascript">
 (function(d, t){
    var g = d.createElement(t),
@@ -15,8 +13,6 @@
    g.src = "http://www.foxyform.com/js.php?id=911594&sec_hash=f46dffa53a1&width=350px";
    s.parentNode.insertBefore(g, s);
 }(document, "script"));
-</script>
-<!-- Do not change the code! -->
-   
+</script><!-- Do not change the code! -->
 </body>
 </html>
