--- a/intex.html
+++ b/intex.html
@@ -95,51 +95,46 @@ body, html {
   <p class="w3-center"><em>I love photography</em></p>
   <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, uis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
     
-<!-- Grid -->
-  <div class="w3-row w3-container">
-    <div class="w3-center w3-padding-64">
-      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">μ' άλλα λόγια</span>
-    </div>
+<!-- gri tetragono
 
-<div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">   <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
-<h3>Design</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
+<div class="w3-row w3-container">
 
-<div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">      
-<i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
-<h3>Branding</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">μ' άλλα λόγια</span></div>
 
-<div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16">   <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
-<h3>Consultation</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
-
-<div class="w3-col l3 m6 w3-black w3-container w3-padding-16">      
-<i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
-<h3>Promises</h3>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
+      <div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">   <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
+      <h3>Design</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
+      <div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">      
+      <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
+      <h3>Branding</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
+      <div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16">   <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
+      <h3>Consultation</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
+      <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">      
+      <i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
+      <h3>Promises</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p></div>
 
 </div>
+-->
 <center><a href="https://alexandroshub.github.io/cv.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD myCV</button></a></center>
-</div>
 
+</div>
+<!-- gri bara -->
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
-    Partners
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
-    Projects Done
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
-    Happy Clients
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
-    Meetings
-  </div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
+  <br>14+</span><br>Partners</div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
+  <br>55+</span><br>Projects Done</div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
+  <br>89+</span><br>Happy Clients</div>
+  <div class="w3-quarter w3-section"><span class="w3-xlarge">
+  <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
+  <br>150+</span><br>Meetings</div>
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
@@ -153,7 +148,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">MY WORK</h3>
   
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
+  <p class="w3-center">Here are some of my latest lorem work ipsum tipsum.<br><em> "Σχεδόν ό,τι κάνεις είναι ασήμαντο, αλλά είναι σημαντικό να το κάνεις."</em></p><br>
 
 <!-- Good offers -->
    <br> <div class="w3-row-padding">
@@ -183,43 +178,43 @@ Files & Publications</div>
 
 </div>
 
-<!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+<!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) 
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="https://farm3.staticflickr.com/2916/14505429069_bb4a889038_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="https://farm4.staticflickr.com/3864/14688909381_494015c1ff_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="https://farm9.staticflickr.com/8634/16112868584_e4bcf2c06f_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      <img src="https://farm1.staticflickr.com/575/21108329376_565e32746e_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+      <img src="https://farm1.staticflickr.com/575/21108329376_565e32746e_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+      <img src="https://farm1.staticflickr.com/575/21108329376_565e32746e_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+      <img src="https://farm1.staticflickr.com/575/21108329376_565e32746e_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      <img src="https://farm1.staticflickr.com/575/21108329376_565e32746e_b.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
     </div>
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
-  </div>
+  </div>-->
 </div>
 
 <!-- Modal for full size images on click-->
@@ -238,12 +233,27 @@ Files & Publications</div>
   </div>
 </div>
 
+
+
+<div class="w3-row w3-center w3-dark-grey w3-padding-8">
+  <div class="w3-section"><b>Προτάσεις</b> :: 
+    <a href="https://www.info-mobility.gr" class="w3-button w3-light-grey">InfoMobilityWorld </a>
+  ::  
+    <a href="https://jobdays.gr/index.php?option=com_content&view=article&id=695:hmerida-stadiodromias-dhmou-khfisiasws-job-day-2017&catid=298:hmerida-stadiodromias-dhmou-khfisiasws-job-day&Itemid=1967" class="w3-button w3-light-grey">#Jobday_Κηφισιάς </a>
+  
+  </div>
+</div>
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
   <div class="w3-row w3-padding-32 w3-section"> 
+  
+  <center><a href="https://robodayblog.wordpress.com"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD BLOG</button></a>
+  <a href="https://alexandroshub.github.io/plus.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD PLUS</button></a>
+  </center>
+  
   </div>
 </div>
 
@@ -273,7 +283,10 @@ Files & Publications</div>
 <br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2017</div>
 <img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:40px;" class="w3-circle w3-animate-opacity w3-animate-zoom"> 
 
-<br><audio controls autoplay><source src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3" type="audio/mpeg"><p>audio element</p></audio>  
+<br><audio controls autoplay><source src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3" type="audio/mpeg"><p>audio element</p></audio> 
+<br>
+<a href="https://alexandroshub.github.io/email" class="w3-button w3-light-grey"><i class="fa fa-envelope w3-margin-right"></i>email</a>
+   
 </footer><!-- End footer -->
  
 <!-- scripts -->
