--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,3 @@
-
-
 <!--CVwebpage
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -37,9 +35,8 @@ body, html {
 </style>
 <body class="w3-light-grey">
 
-<!-- MENU --><div w3-include-html="https://alexandroshub.github.io/navtopmenu.html" id="home"></div><script>w3.includeHTML();</script><!-- /MENU -->
+<a href="javascript:void(0)" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:60;"></a>
 
-<br><br>
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
