--- a/xmas.html
+++ b/xmas.html
@@ -42,18 +42,19 @@
   50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
   100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
 }	
+
+body { background: #efefef url(https://i.imgur.com/9mv2XGt.gif)  no-repeat local center center; 
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+}
 </style>
 
-<body background="https://i.imgur.com/9mv2XGt.gif">
-<img src="https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png" style="width:170px;">
-<div class="w3-display-middle">  <center>
-<img src="https://pics.clipartpng.com/midle/Merry_Christmas_Red_Text_Decor_PNG_Clipart-36.png" style="width:350px;">
-<hr><img src="https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:400px;">
-</center>
-</div>
+<body>
+<div class="w3-display-middle"><center>
+<img src="https://pics.clipartpng.com/midle/Merry_Christmas_Red_Text_Decor_PNG_Clipart-36.png" style="width:370px;">
+</center></div>
 
-
-<div id="snow">
-</div>
+<div id="snow"></div>
 </body>
 </html>
