--- a/intex.html
+++ b/intex.html
@@ -1,3 +1,4 @@
+
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -69,17 +70,17 @@ body, html {
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
+    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-user"></i> ABOUT</a>
+    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-th"></i> PORTFOLIO</a>
+    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-plus-circle"></i> PLUS</a>
+    <a href="https://m.me/papaspyrou.alexandros" class="w3-bar-item w3-button"><i class="fa fa-comments-o"></i></a>
   </div>
 </div>
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">TECH <span class="w3-hide-small">SUPPORT & </span> SOLUTIONS</span>
   </div>
 </div>
 
@@ -90,10 +91,10 @@ body, html {
 
 <div class="chip"><center><img src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" alt="AlexandrosPapaspyrou"> </center></div>
 
-  <h3 class="w3-center">ABOUT ME</h3>
+  <h3 class="w3-center">it's me</h3>
   
-  <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, uis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</p>
+  <p class="w3-center"><em>"I'm not trying to be anyone's savior. I'm just trying to think about the future and not be sad."</em></p>
+  <p>soon </p>
     
 <!-- gri tetragono
 
@@ -118,7 +119,9 @@ body, html {
 
 </div>
 -->
-<center><a href="https://alexandroshub.github.io/cv.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD myCV</button></a></center>
+<center><a href="https://alexandroshub.github.io/cv.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD myCV</button></a>
+<a href="https://alexandroshub.github.io/email.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD email</button></a>
+</center>
 
 </div>
 <!-- gri bara -->
@@ -147,8 +150,7 @@ body, html {
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">MY WORK</h3>
-  
-  <p class="w3-center">Here are some of my latest lorem work ipsum tipsum.<br><em> "Σχεδόν ό,τι κάνεις είναι ασήμαντο, αλλά είναι σημαντικό να το κάνεις."</em></p><br>
+  <p class="w3-center"><em> "Σχεδόν ό,τι κάνεις είναι ασήμαντο, αλλά είναι σημαντικό να το κάνεις."</em></p><br>
 
 <!-- Good offers -->
    <br> <div class="w3-row-padding">
@@ -245,7 +247,7 @@ Files & Publications</div>
 </div>
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
+  <h3 class="w3-center">please... wait...</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
   <div class="w3-row w3-padding-32 w3-section"> 
@@ -257,36 +259,44 @@ Files & Publications</div>
   </div>
 </div>
 
+
+<!-- finale -->
+
+
+<div class="w3-row w3-center w3-dark-grey w3-padding-8">
+  <div class="w3-section"><b>soon</b> :: 
+  
+  </div>
+</div>
+
+
+<!-- finale -->
+
+
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-32">
+<footer class="w3-center w3-black w3-padding-16">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
    <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
 <!-- SM --><div class="w3-black w3-center w3-padding-12">
 <a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
 <a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
-<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:white"></i></a>
 <a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a>
-<a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:white"></i></a>
-<a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:white"></i></a> 
-<a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:white"></i></a>
 <a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:white"></i></a> 
-<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:white"></i></a>
 <a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:white"></i></a>
-<a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:white"></i></a>
-<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:white"></i></a>
-<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:white"></i></a>
-<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:white"></i></a>
-<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:white"></i></a>
-<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
 <a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
 <a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
 <br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2017</div>
-<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:40px;" class="w3-circle w3-animate-opacity w3-animate-zoom"> 
+<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:50px;" class="w3-circle w3-animate-opacity w3-animate-zoom"> 
 
+<div class="w3-display-left w3-text-white w3-large" style="padding:24px 48px">
+
+<img src="https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:300px;">
+</div>
+<!--
 <br><audio controls autoplay><source src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3" type="audio/mpeg"><p>audio element</p></audio> 
 <br>
-<a href="https://alexandroshub.github.io/email" class="w3-button w3-light-grey"><i class="fa fa-envelope w3-margin-right"></i>email</a>
-   
+
+    -->
 </footer><!-- End footer -->
  
 <!-- scripts -->
