--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-
-
-<!DOCTYPE html>
-<!--
+<!-- Welcome... jump to XMAS page
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -11,10 +8,14 @@ Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
 Last Update: 1/12/2017  |  Alpha Stage -->
 
+<!DOCTYPE html>
 <html>
 <title>Papaspyrou</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
+<!-- xmaspage --><meta http-equiv="Refresh" content="3;url=https://alexandroshub.github.io/xmas"><!-- xmaspage -->
+
+
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -30,10 +31,35 @@ body, html {height: 100%}
     background-position: center;
     background-size: cover;
 }
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid black;
+  border-bottom: 16px solid black;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
 </style>
 <body>
-<audio autoplay id="audio-example-no-controls" class="audio-example" src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3"> You will see this text if native audio playback is not supported. </audio> <style> .audio-example { display: block; } </style>
 
+<!--
+<audio autoplay id="audio-example-no-controls" class="audio-example" src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3"> You will see this text if native audio playback is not supported. </audio> <style> .audio-example { display: block; } </style> -->
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
 
@@ -43,7 +69,9 @@ body, html {height: 100%}
 </div>
 
   <div class="w3-display-middle">
-    <center><h1 class="w3-jumbo w3-animate-top">COMING SOON</h1></center></div>
+    <center><h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <div class="loader"></div>
+    </center></div>
 <!-- SC MEDIA --><span class="w3-hide-small">
 <div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
     <a href="https://www.facebook.com/papaspyrou.a">
